<resources>
    <string name="app_name">Time Trapper</string>
    <string name="main_intro">Time Trapper aide à limiter volontairement le temps passé sur les applications surveillées.</string>
    <string name="main_wellbeing_note">Objectif: bien-être numérique et contrôle volontaire du temps d\'écran, sans root.</string>
    <string name="permissions_priority_title">Configuration prioritaire requise</string>
    <string name="permissions_priority_hint">Activez d\'abord l\'accessibilité et l\'overlay pour lancer le contrôle du temps.</string>
    <string name="permissions_ready_title">Configuration validée</string>
    <string name="permissions_ready_hint">Tout est actif. Vous pouvez gérer tranquillement vos applications surveillées.</string>
    <string name="status_accessibility_enabled">Accessibilité: activée</string>
    <string name="status_accessibility_disabled">Accessibilité: désactivée</string>
    <string name="status_overlay_enabled">Overlay: activé</string>
    <string name="status_overlay_disabled">Overlay: désactivé</string>
    <string name="button_open_accessibility_settings">Paramètres accessibilité</string>
    <string name="button_open_overlay_settings">Paramètres overlay</string>
    <string name="monitored_apps_title">Applications surveillées</string>
    <string name="monitored_apps_subtitle">Chaque ligne affiche un titre personnalisé + packageName. Vous pouvez modifier les deux.</string>
    <string name="button_add_monitored_app">Ajouter une application</string>
    <string name="button_edit">Modifier</string>
    <string name="button_remove">Retirer</string>
    <string name="no_monitored_apps">Aucune application surveillée.</string>
    <string name="dialog_add_app_title">Ajouter une application surveillée</string>
    <string name="dialog_edit_app_title">Modifier l\'application surveillée</string>
    <string name="dialog_known_apps_title">Ajouter une application connue</string>
    <string name="dialog_known_apps_custom_option">Application personnalisée…</string>
    <string name="dialog_save">Enregistrer</string>
    <string name="dialog_app_title_hint">Titre affiché</string>
    <string name="dialog_app_package_hint">Package name (ex: com.instagram.android)</string>
    <string name="error_app_title_required">Le titre est requis</string>
    <string name="error_app_package_invalid">Nom de package invalide</string>
    <string name="debug_logs_label">Activer les logs debug</string>
    <string name="debug_logs_hint">Utile pour diagnostiquer les evenements du service en temps reel.</string>
    <string name="button_clear_sessions">Réinitialiser les sessions actives</string>
    <string name="active_sessions_title">Sessions actives</string>
    <string name="no_active_sessions">Aucune session active.</string>
    <string name="session_unlimited">Aucune limite (session active)</string>
    <string name="session_remaining">Temps restant: %1$s</string>
    <string name="overlay_title">Combien de temps autoriser pour cette application ?</string>
    <string name="overlay_subtitle">Choisissez une durée pour cette session.</string>
    <string name="overlay_package_label">Application: %1$s</string>
    <string name="overlay_duration_1">1 min</string>
    <string name="overlay_duration_2">2 min</string>
    <string name="overlay_duration_5">5 min (défaut)</string>
    <string name="overlay_duration_15">15 min</string>
    <string name="overlay_duration_no_limit">Aucune limite</string>
    <string name="overlay_no_limit_info">“Aucune limite” = pas de blocage pour cette session.</string>
    <string name="overlay_confirm">Confirmer</string>
    <string name="blocked_title">Temps écoulé pour cette application</string>
    <string name="blocked_subtitle">Le temps autorisé est terminé.</string>
    <string name="blocked_package">Application bloquée: %1$s</string>
    <string name="blocked_unknown_package">Application bloquée</string>
    <string name="button_extend_5">Prolonger de 2 minutes</string>
    <string name="button_go_home">Retour à l\'accueil</string>
    <string name="toast_extension_applied">Session prolongée de 2 minutes</string>
    <string name="toast_package_added">Application ajoutée à la surveillance</string>
    <string name="toast_package_updated">Application mise à jour</string>
    <string name="toast_package_removed">Application retirée de la surveillance</string>
    <string name="toast_invalid_package">Nom de package invalide</string>
    <string name="toast_sessions_cleared">Sessions réinitialisées</string>
    <string name="toast_dialog_open_error">Impossible d\'ouvrir la fenêtre d\'édition</string>
    <string name="toast_overlay_already_enabled">La permission overlay est déjà activée</string>
    <string name="toast_settings_open_error">Impossible d\'ouvrir les paramètres</string>
    <string name="accessibility_service_label">Time Trapper - Contrôle du temps</string>
    <string name="accessibility_service_description">Détecte les applications surveillées pour proposer une limite de temps volontaire (bien-être numérique).</string>
</resources>
